<resources>
    <string name="app_name">Data-Persistence</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="list">List</string>
    <string name="search">Search</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
</resources>